--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8" />
 	<title>R-Quiz - Interaktive Quizzes Framework by Felix Riesterer</title>
-	<script src="_scripts/rquiz.js"></script>
+	<script src="./_scripts/rquiz.js"></script>
 </head>
 <body style="background: #cfc">
 	<h1>Interaktive Quizzes</h1>
 	<p>This is a demo page for <a href="https://felix-riesterer.de/main/seiten/rquiz_en.html">my quiz script frameowrk</a>.</p>
 	<ol>
-		a<li><a href="#rquiz-matching">Matching Quiz (match pairs)</a></li>
+		<li><a href="#rquiz-matching">Matching Quiz (match pairs)</a></li>
 		<li><a href="#rquiz-matching-gruppenweise">Matching Quiz (match groups)</a></li>
 		<li><a href="#rquiz-gapfill">Gap Fill Quiz</a></li>
 		<li><a href="#sorting">Sorting Quiz (made with the gap fill quiz mechanism)</a></li>
