--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>R-Quiz - Interaktive Quizzes Framework by Felix Riesterer</title>
-	<script src="./_scripts/rquiz.js"></script>
+	<script src="/js/rquiz.js"></script>
 </head>
 <body style="background: #cfc">
 	<h1>Interaktive Quizzes</h1>
